# PREDICT-MIT-LL

./: LICENSE  MIT_LL_data2.csv  MIT_LL_first_encoder.ipynb  README.md  Rand_Forest_SMILES_chemnet.ipynb  functions_enc.py  plotting_functions.py  pyproject.toml  python.gitignore  requirements.txt
MIT_LL_data/: ChemNet_df2.csv  ChemNet_of_all_df3.csv  ChemNet_of_df2neg_no_repeats.csv  ChemNet_of_df2pos_no_repeats.csv  ChemNet_of_df3_LTQOpos_no_repeats.csv  ChemNet_of_df3_QQneg_no_repeats.csv  ChemNet_of_df3_QQpos_no_repeats.csv  ChemNet_of_df3_QTOFpos_no_repeats.csv  MIT_LL_data3.csv  binned_df3_LTQOpos_spectra.csv  binned_df3_QQneg_spectra.csv  binned_df3_QQpos_spectra.csv  df2_binned_neg_filled.csv  df3_QQpos_with_RF_predictions.csv
Notebooks/: 2_step_model_confusion_and_heatmaps.ipynb  4_Neural_Networks.ipynb  Classification_final_results.ipynb  Cond_encoder_gris_search.ipynb  Conditional_enc_grid_search.py  Conditioned_encoder.ipynb  December_2025_work.ipynb  Jun25Data_grid_search.ipynb  MIT_LL_expanded_dataset.ipynb  MIT_LL_first_encoder.ipynb  MIT_LL_second_encoder.ipynb  Misc_Experiments.ipynb  Rand_Forest_SMILES_chemnet.ipynb  Regression_final_results_figures.ipynb  Spectra_ChemNet_BinThr_gridsearch.ipynb  bin_and_threshold_experiment.ipynb  cond_enc_1234e1e2_classification_visualizations.ipynb  conditional_enc_pca_projections.ipynb  confusion_matricies_and_heatmaps.ipynb  dataset_creation.py  df6_spectra_random_forest.ipynb  df_creation_ChemNet_df4_grid_search.py  encoder_essentials.py  encoder_randforest_subset_union.ipynb  function_depot.py  functions_enc.py  (+4 more)
(+54 files in other folders)
