[tool.poetry]
name = "mitlincolnlabs-project"
version = "0.1.0"
description = "Chemical detection"
authors = ["Dashiell Lipsey <dlipsey@wpi.edu>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Add this line for your local Python files
# Python_files = {path = "./Python_files", develop = true}
# For the computational code
torch = {version = "2.5.1", source = "pytorch"}
torchvision = {version = "0.20.*", source = "pytorch"}
numpy = "2.1.*"
# For data
pandas = "2.2.*"
pyarrow = "17.*.*"
# For the notebooks and vscode
matplotlib = "3.9.*"
plotly = "5.24.*"
ipykernel = "6.29.*"
ipympl = "0.9.*"
jupyterlab = "4.3.*"
jupytext = "1.17.*"
nbconvert = "7.16.*"
# wandb.ai
wandb = "0.19.*"
# Command line parsing
click = "8.1.*"
# Running jupyter notebooks in batch mode
papermill = "2.6.0"
# ML libraries
scikit-learn = "1.3.*"
seaborn = "0.13.*"
imbalanced-learn = "0.12.*"
# Chemistry libraries
rdkit = "2024.3.*"
fcd-torch = "1.0.*"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"